--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git push origin main"
+    "deploy": "git push origin gh-pages"
   },
   "eslintConfig": {
     "extends": [
