--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "gh-pages": "^3.2.3"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "install": "yarn install",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build -b gh-pages",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
