--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio-3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://osakalawliet.github.io/portfolio-template-v2",
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
@@ -27,17 +26,14 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "gh-pages": "^3.2.3"
+    "@types/react-dom": "^17.0.11"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git push origin main"
+    "deploy": "git push prod main"
   },
   "eslintConfig": {
     "extends": [
