--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git push prod main"
+    "deploy": "git push origin main"
   },
   "eslintConfig": {
     "extends": [
