--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -29,9 +29,7 @@ jobs:
           echo ${{ secrets.FIREBASE_JSON }} | base64 -d >> firebase.json
           echo ${{ secrets.FIREBASERC }} | base64 -d >> .firebaserc
 
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_B7F3F }}'
-          channelId: live
-          projectId: portfolio-b7f3f
+      - name: Deploy to Firebase Hosting
+        run: |
+          npm install -g firebase-tools
+          firebase deploy --only hosting:demo --project=${{ secrets.FIREBASE_PROJECT_NAME }} --token=${{ secrets.FIREBASE_TOKEN }} --non-interactive
