--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,12 +24,8 @@ jobs:
       - name: Build app
         run: yarn build
 
-      - name: Create firebase.json and .firebaserc
-        run: |
-          echo ${{ secrets.FIREBASE_JSON }} | base64 -d >> firebase.json
-          echo ${{ secrets.FIREBASERC }} | base64 -d >> .firebaserc
-
-      - name: Deploy to Firebase Hosting
-        run: |
-          npm install -g firebase-tools
-          firebase deploy --only hosting:channel:deploy --project=${{ secrets.FIREBASE_PROJECT_NAME }} --token=${{ secrets.FIREBASE_TOKEN }} --non-interactive
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_B7F3F }}'
+          projectId: portfolio-b7f3f
