--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,11 +8,10 @@ name: Deploy to Firebase Hosting on merge
       - main
 jobs:
   build_and_deploy:
-    if: ${{ github.repository }} == 'osakalawliet/portfolio-template-v2'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+     
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -23,9 +22,10 @@ jobs:
 
       - name: Build app
         run: yarn build
-
+      
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_B7F3F }}'
+          channelId: live
           projectId: portfolio-b7f3f
